--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@jspsych/plugin-html-button-response": "^2.0.0",
+    "@jspsych/plugin-html-keyboard-response": "^2.0.0",
+    "@jspsych/plugin-html-slider-response": "^2.0.0",
+    "@jspsych/plugin-survey-text": "^2.0.0",
     "jspsych": "^8.0.2",
     "lodash": "^4.17.21"
   }
