--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "psych-idp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "html-webpack-plugin": "^5.6.0",
-    "weback": "^0.0.1-security",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "jspsych": "jspsych -e experiment",
+    "start": "npm run jspsych -- run",
+    "build": "npm run jspsych -- build",
+    "jatos": "npm run jspsych -- build --jatos"
   },
   "dependencies": {
+    "@jspsych/plugin-fullscreen": "^1.1.2",
     "@jspsych/plugin-html-button-response": "^2.0.0",
-    "@jspsych/plugin-html-keyboard-response": "^2.0.0",
+    "@jspsych/plugin-html-keyboard-response": "^1.1.2",
     "@jspsych/plugin-html-slider-response": "^2.0.0",
+    "@jspsych/plugin-preload": "^1.1.2",
     "@jspsych/plugin-survey-text": "^2.0.0",
-    "jspsych": "^8.0.2",
-    "lodash": "^4.17.21"
-  }
+    "jspsych": "^7.3.1"
+  },
+  "devDependencies": {
+    "jspsych-builder": "^4.4.0"
+  },
+  "browserslist": ">0.25%, not dead"
 }
