audio, but with error

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "jatos": "npm run jspsych -- build --jatos"
   },
   "dependencies": {
+    "@jspsych/plugin-audio-button-response": "^2.0.1",
+    "@jspsych/plugin-audio-keyboard-response": "^2.0.0",
     "@jspsych/plugin-fullscreen": "^1.1.2",
     "@jspsych/plugin-html-button-response": "^2.0.0",
     "@jspsych/plugin-html-keyboard-response": "^1.1.2",
