--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@jspsych/plugin-audio-button-response": "^2.0.1",
     "@jspsych/plugin-audio-keyboard-response": "^2.0.0",
     "@jspsych/plugin-fullscreen": "^1.1.2",
+    "@jspsych/plugin-html-audio-response": "^2.0.0",
     "@jspsych/plugin-html-button-response": "^2.0.0",
     "@jspsych/plugin-html-keyboard-response": "^1.1.2",
     "@jspsych/plugin-html-slider-response": "^2.0.0",
+    "@jspsych/plugin-initialize-microphone": "^2.0.0",
     "@jspsych/plugin-preload": "^1.1.2",
     "@jspsych/plugin-survey-text": "^2.0.0",
     "jspsych": "^8.0.2"
