--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@jspsych/plugin-initialize-microphone": "^2.0.0",
     "@jspsych/plugin-preload": "^1.1.2",
     "@jspsych/plugin-survey-text": "^2.0.0",
-    "jspsych": "^8.0.2"
+    "fs": "^0.0.1-security",
+    "jspsych": "^8.0.2",
+    "openai": "^4.68.4"
   },
   "devDependencies": {
     "jspsych-builder": "^4.4.0"
