subject ID dropdowns + added to data

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@jspsych/plugin-initialize-microphone": "^2.0.0",
     "@jspsych/plugin-instructions": "^2.0.0",
     "@jspsych/plugin-preload": "^1.1.2",
+    "@jspsych/plugin-survey": "^2.0.1",
+    "@jspsych/plugin-survey-multi-choice": "^2.0.1",
+    "@jspsych/plugin-survey-multi-select": "^2.0.1",
     "@jspsych/plugin-survey-text": "^2.0.0",
     "convert-csv-to-json": "^2.49.0",
     "csv-reader": "^1.0.12",
