Changes from feedback, added confetti

--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@jspsych/plugin-survey-multi-choice": "^2.0.1",
     "@jspsych/plugin-survey-multi-select": "^2.0.1",
     "@jspsych/plugin-survey-text": "^2.1.0",
+    "canvas-confetti": "^1.9.3",
     "convert-csv-to-json": "^2.49.0",
     "csv-reader": "^1.0.12",
     "fs": "^0.0.1-security",
     "hunspell-spellchecker": "^1.0.2",
     "jspsych": "^8.0.2",
     "openai": "^4.71.0",
-    "panda": "^0.6.5",
+    "panda": "^0.2.2",
     "pandas": "^0.0.3",
     "papaparse": "^5.4.1",
     "pd": "^0.8.1",
