--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@jspsych/plugin-audio-button-response": "^2.0.1",
     "@jspsych/plugin-audio-keyboard-response": "^2.0.0",
+    "@jspsych/plugin-browser-check": "^2.1.0",
     "@jspsych/plugin-call-function": "^2.1.0",
     "@jspsych/plugin-fullscreen": "^1.1.2",
     "@jspsych/plugin-html-audio-response": "^2.0.0",
