--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typo-js": "^1.2.5"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.16",
     "css-loader": "^7.1.2",
     "jspsych-builder": "^4.4.0",
     "sass": "^1.83.4",
